[package]
name = "substrate-consensus-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
parity-scale-codec = { version = "3.6.9", features = ["derive"] }
scale-info = { version = "2.10.0", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
